--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="wish_chosen_products_list">
-                    <ul>
+                    <ul id="wish_chosen_products_list_ul">
                         <li>
                             <div class="wish_chosen_product_list">
                                 <i class="wish_delete fa-solid fa-heart"></i>
