--- a/cart/cart.html
+++ b/cart/cart.html
@@ -48,7 +48,7 @@
             <div class="chosen_products_box">
                 <div class="cart_header">
                     <h2>Shopping Cart</h2>
-                    <p>You have: 3 items in your cart.</p>
+                    <p>You have: 0 items in your cart.</p>
                 </div>
 
                 <div class="cart_filter">
@@ -61,45 +61,8 @@
                 </div>
 
                 <div class="chosen_products_list">
-                    <ul>
-                        <li>
-                            <div class="chosen_product_list">
-                                <i class="delete_product fa-solid fa-xmark"></i>
-                                <div class="chosen_product_img_box"><a href="../motorcycle catalog/motorcycles.html#6"><img src="../images/product/kawasaki product/h2 sx.png" alt=""></a></div>
-                                <ul>
-                                    <li>Ninja h2 sx</li>
-                                    <li>26,678.22 $</li>
-                                    <li><input class="chosen_product_input" type="number" value="1" min="1"></li>
-                                    <li>26,678.22 $</li>
-                                </ul>
-                            </div>
-                        </li>
-
-                        <li>
-                            <div class="chosen_product_list">
-                                <i class="delete_product fa-solid fa-xmark"></i>
-                                <div class="chosen_product_img_box"><a href="../motorcycle catalog/motorcycles.html#1"><img src="../images/product/kawasaki product/z1000sx.png" alt=""></a></div>
-                                <ul>
-                                    <li>Z1000SX</li>
-                                    <li>27,960.40 $</li>
-                                    <li><input class="chosen_product_input" type="number" value="1" min="1"></li>
-                                    <li>27,960.40 $</li>
-                                </ul>
-                            </div>
-                        </li>
-
-                        <li>
-                            <div class="chosen_product_list">
-                                <i class="delete_product fa-solid fa-xmark"></i>
-                                <div class="chosen_product_img_box"><a href="../motorcycle catalog/motorcycles.html#2"><img src="../images/product/suzuki product/GSX-R125.png" alt=""></a></div>
-                                <ul>
-                                    <li>GSX-R125</li>
-                                    <li>6,399.70 $</li>
-                                    <li><input class="chosen_product_input" type="number" value="1" min="1"></li>
-                                    <li>6,399.70 $</li>
-                                </ul>
-                            </div>
-                        </li>
+                    <ul id="chosen_products_list_ul">
+                        
                     </ul>
 
                     <form action="cart.html" method="get">
