--- a/cart/cart.html
+++ b/cart/cart.html
@@ -84,7 +84,7 @@
 
                     <div class="checkout_box_subtotal">
                         <p>Subtotal</p>
-                        <p>64,002.57 $</p>
+                        <p class="subtotal">0 $</p>
                     </div>
 
                     <div class="checkout_box_shipping">
@@ -114,7 +114,7 @@
 
                     <div class="checkout_box_total">
                         <p>Total</p>
-                        <p>64,002.57 $</p>
+                        <p class="total">0 $</p>
                     </div>
 
                     <button class="checkout_button">Proceed to checkout</button>
