--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="back_1">
                     <p class="catalogs_box_text">Your riding journey starts here! We offer a wide selection of motorcycles from top global brands, ranging from high-speed sport bikes to comfortable cruisers. Each motorcycle is carefully chosen to provide the perfect blend of power, performance, and design.</p>
-                    <a href="motorcycle catalog/motorcycles.html" class="catalog_link_1"><button class="catalog_button">See More</button></a>
+                    <a href="catalog/catalog.html?category=motorcycles" class="catalog_link_1"><button class="catalog_button">See More</button></a>
                 </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="back_2">
                     <p class="catalogs_box_text">Your safety is our priority! In the Gear Protection category, you’ll find premium helmets, gloves, body armor, and advanced riding jackets. Designed for maximum protection, comfort, and style, our gear ensures a safe, enjoyable, and confident riding experience every time.</p>
-                    <a href="#" class="catalog_link_2"><button class="catalog_button">See More</button></a>
+                    <a href="catalog/catalog.html?category=gear" class="catalog_link_2"><button class="catalog_button">See More</button></a>
                 </div>
                 </div>
             </div> 
@@ -104,7 +104,7 @@
                 </div>
                 <div class="back_3">
                     <p class="catalogs_box_text">Keep your motorcycle in top shape! Discover a wide range of high-quality spare parts, accessories, and upgrades for all types of motorcycles. All parts meet the highest standards to maintain your bike’s performance for the long haul.</p>
-                    <a href="#" class="catalog_link_3"><button class="catalog_button">See More</button></a>
+                    <a href="catalog/catalog.html?category=parts" class="catalog_link_3"><button class="catalog_button">See More</button></a>
                 </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="back_4">
                     <p class="catalogs_box_text">Take your ride to the next level! Explore cutting-edge technology to enhance performance, information, and comfort while riding. Smart gadgets, navigation systems, advanced sensors, and more - all designed to make your riding experience smarter and more exciting.</p>
-                    <a href="#" class="catalog_link_4"><button class="catalog_button">See More</button></a>
+                    <a href="catalog/catalog.html?category=upgrades" class="catalog_link_4"><button class="catalog_button">See More</button></a>
                 </div>
                 </div>
             </div>
@@ -171,170 +171,12 @@
         </section>
 
         <section>
-            <div class="top_product_title_box"><h2 class="top_product_title">Our top models</h2></div>
-
-            <div class="top_products">
-                <div class="top_product_super_box" id="1" style="--isPopular:true">
-                    <div class="box"><p>Moto & Ride 🏍️</p></div>
-                    <div class="product_box">
-                        <div class="product_img_box">
-                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
-                        </div>
-
-                        <div class="product_logo_box">
-                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
-                            <div>
-                                <i class="fa-solid fa-heart add_to_wishlist"></i>
-                                <i class="fa-solid fa-cart-shopping add_to_cart"></i>
-                            </div>
-                        </div>
-
-                        <div class="center">
-                             <article class="product_name_box">
-                                <h3 class="product_name">Ninja h2 sx</h3>
-                             </article>
-
-                            <article class="describe_box">
-                                <p class="describe">A high-performance sport bike from Kawasaki, featuring a 998cc supercharged engine that</p>
-                            </article>
-
-                            <article class="buy_box">
-                                <div>
-                                    <div class="original_price_box">
-                                        <h4 class="original_price">29,642.47 $</h4>
-                                        <div class="discount"><p>-10%</p></div>
-                                    </div>
-                                <h2>26,678.22 $</h2>
-                                </div>
-                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
-                            </article>
-                        </div>
-                        <div class="new_popular"></div>
-                        <div class="curve"></div>
-                    </div>
-                </div>
-
-                <div class="top_product_super_box" id="2" style="--isPopular:true">
-                    <div class="box"><p>Moto & Ride 🏍️</p></div>
-                    <div class="product_box">
-                        <div class="product_img_box">
-                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
-                        </div>
-
-                        <div class="product_logo_box">
-                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
-                            <div>
-                                <i class="fa-solid fa-heart add_to_wishlist"></i>
-                                <i class="fa-solid fa-cart-shopping add_to_cart"></i>
-                            </div>
-                        </div>
-
-                        <div class="center">
-                            <article class="product_name_box">
-                                <h3 class="product_name">Ninja h2 sx</h3>
-                            </article>
-
-                            <article class="describe_box">
-                                <p class="describe">A high-performance sport bike from Kawasaki, featuring a 998cc supercharged engine that</p>
-                            </article>
-
-                            <article class="buy_box">
-                                <div>
-                                    <div class="original_price_box">
-                                        <h4 class="original_price">29,642.47 $</h4>
-                                        <div class="discount"><p>-10%</p></div>
-                                    </div>
-                                <h2>26,678.22 $</h2>
-                                </div>
-                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
-                            </article>
-                        </div>
-                        <div class="new_popular"></div>
-                        <div class="curve"></div>
-                    </div>
-                </div>
-
-                <div class="top_product_super_box" id="3" style="--isPopular:true">
-                    <div class="box"><p>Moto & Ride 🏍️</p></div>
-                    <div class="product_box">
-                        <div class="product_img_box">
-                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
-                        </div>
-
-                        <div class="product_logo_box">
-                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
-                            <div>
-                                <i class="fa-solid fa-heart add_to_wishlist"></i>
-                                <i class="fa-solid fa-cart-shopping add_to_cart"></i>
-                            </div>
-                        </div>
-
-                        <div class="center">
-                            <article class="product_name_box">
-                                <h3 class="product_name">Ninja h2 sx</h3>
-                            </article>
-
-                            <article class="describe_box">
-                                <p class="describe">A high-performance sport bike from Kawasaki, featuring a 998cc supercharged engine that</p>
-                            </article>
-
-                            <article class="buy_box">
-                                <div>
-                                    <div class="original_price_box">
-                                        <h4 class="original_price">29,642.47 $</h4>
-                                        <div class="discount"><p>-10%</p></div>
-                                    </div>
-                                <h2>26,678.22 $</h2>
-                                </div>
-                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
-                            </article>
-                        </div>
-                        <div class="new_popular"></div>
-                        <div class="curve"></div>
-                    </div>
-                </div>
-
-                <div class="top_product_super_box" id="4" style="--isPopular:true">
-                    <div class="box"><p>Moto & Ride 🏍️</p></div>
-                    <div class="product_box">
-                        <div class="product_img_box">
-                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
-                        </div>
-
-                        <div class="product_logo_box">
-                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
-                            <div>
-                                <i class="fa-solid fa-heart add_to_wishlist"></i>
-                                <i class="fa-solid fa-cart-shopping add_to_cart"></i>
-                            </div>
-                        </div>
-
-                        <div class="center">
-                            <article class="product_name_box">
-                                <h3 class="product_name">Ninja h2 sx</h3>
-                            </article>
-
-                            <article class="describe_box">
-                                <p class="describe">A high-performance sport bike from Kawasaki, featuring a 998cc supercharged engine that</p>
-                            </article>
-
-                            <article class="buy_box">
-                                <div>
-                                    <div class="original_price_box">
-                                        <h4 class="original_price">29,642.47 $</h4>
-                                        <div class="discount"><p>-10%</p></div>
-                                    </div>
-                                <h2>26,678.22 $</h2>
-                                </div>
-                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
-                            </article>
-                        </div>
-                        <div class="new_popular"></div>
-                        <div class="curve"></div>
-                    </div>
-                </div>
-                
+            <div class="top_product_title_box">
+                <h2 class="top_product_title">Our top models</h2>
+                <p class="total_products">Discover 0 exlusive motorcyles</p>
             </div>
+
+            <div id="top_products" class="top_products"></div>
         </section>
 
         <section class="subcategory_super_box">
