--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -45,7 +45,7 @@
     <main>
         <section class="display-flex margin-0">
             <section class="filter_sidebar display-flex justifyContent-center color-white margin-0">
-                <form action="motorcycles.html" method="get" class="display-flex flexDirection-column">
+                <form action="catalog.html" method="get" class="display-flex flexDirection-column">
                     <div><br>
                         <h3>price</h3>
                         <div class="display-flex justifyContent-spaceBetween alignItems-center">
@@ -104,7 +104,7 @@
                     <section class="catalog_menu">
                         <div class="catalog_menu_overflow">
                             <section class="filter_sidebar_responsive">
-                                <form action="motorcycles.html" method="get" class="display-flex flexDirection-column">
+                                <form action="catalog.html" method="get" class="display-flex flexDirection-column">
                                     <div><br>
                                         <h3>price</h3>
                                         <div class="display-flex justifyContent-spaceBetween alignItems-center">
@@ -158,7 +158,7 @@
                     <section class="catalog_overlay"></section>
                 </div>
 
-                <div id="motorcycles_catalog" class="products_list display-flex flexWrap-wrap">
+                <div id="catalog" class="products_list display-flex flexWrap-wrap">
                     
                 </div>
             </section>
